<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/friends_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/friendsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/friends"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"/>

    <ImageButton
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_add_circle"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:contentDescription="@string/add_friend" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friendsText"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</RelativeLayout>