<resources>
    <string name="app_name">DayDayApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start_work">StartWork</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="delete_this_study_location">Delete this study location</string>
    <string name="to_do_list">To-do-list</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="add_friend">Add friend</string>
    <string name="friends">Friends</string>
    <string name="current_score">Current Score:</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="log_out">Log Out</string>
    <string name="sample_text">Sample text</string>
    <string name="status">Status</string>
    <string name="_0">0</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="new_task">New Task</string>
    <string name="title">Title</string>
    <string name="select_date">Select Date:</string>
    <string name="jan_01_2022">JAN 01 2022</string>
    <string name="set_task_duration">Set task duration:</string>
    <string name="_15">15</string>
    <string name="mins">mins</string>
    <string name="save">Save</string>
    <string name="sample_data">Sample Data</string>
    <string name="other">Other</string>
    <string name="me">Me</string>
    <string name="start_compete">Start Compete</string>
    <string name="compete_result">Compete Result:</string>
    <string name="cannot_find_opponent">Cannot find opponent!</string>
</resources>