...
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:textSize="24sp"/>

    <ImageButton
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_location_button"
        android:layout_marginStart="340dp"
        android:backgroundTint="@color/white"
        android:scaleX="1.5"
...
        android:textColor="#50857A"
        android:src="@drawable/ic_baseline_add_circle"
        android:scaleX="1.2"
        android:scaleY="1.2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listText"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

...
